--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     // For local unit tests
     testImplementation 'com.google.dagger:hilt-android-testing:2.36'
     kaptTest 'com.google.dagger:hilt-compiler:2.36'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
 
 kapt {
