--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 def mapApiKey = project.properties['MAPS_API_KEY']
 def geoapifyApiKey = project.properties['GEOAPIFY_API_KEY']
@@ -46,7 +47,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -57,14 +57,14 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.3"
 
     // Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.36'
-    kapt 'com.google.dagger:hilt-compiler:2.36'
+    implementation 'com.google.dagger:hilt-android:2.37'
+    kapt 'com.google.dagger:hilt-compiler:2.37'
     // For instrumentation tests
-    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.36'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.36'
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.37'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.37'
     // For local unit tests
-    testImplementation 'com.google.dagger:hilt-android-testing:2.36'
-    kaptTest 'com.google.dagger:hilt-compiler:2.36'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.37'
+    kaptTest 'com.google.dagger:hilt-compiler:2.37'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -77,6 +77,14 @@ dependencies {
 
     // Location
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    // Firebase UI
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
+    implementation 'com.firebaseui:firebase-ui-storage:7.1.1'
 }
 
 kapt {
