--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
         // Dagger Hilt
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.36'
 
+        // Firebase
+        classpath 'com.google.gms:google-services:4.3.8'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
