--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,12 +79,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     // Firebase
-    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation platform('com.google.firebase:firebase-bom:28.2.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
-    // Firebase UI
-    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
-    implementation 'com.firebaseui:firebase-ui-storage:7.1.1'
+    implementation 'com.google.firebase:firebase-firestore'
 }
 
 kapt {
