--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.openclassrooms.realestatemanager">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28"
+        tools:ignore="ScopedStorage"  />
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
+        android:name=".RealEstateManagerApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@drawable/real_estate_icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/real_estate_icon"
         android:supportsRtl="true"
-        android:name=".RealEstateManagerApplication"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true">
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
         <activity android:name=".ui.list.ListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,14 +35,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.details.DetailsActivity"/>
+        <activity android:name=".ui.details.DetailsActivity" />
         <activity android:name=".ui.add.AddPropertyActivity" />
+        <activity android:name=".ui.camera.CameraActivity"
+            android:theme="@style/fullscreenTheme"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
-
-        <!-- For Google Maps -->
+            android:resource="@array/preloaded_fonts" /> <!-- For Google Maps -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/maps_api_key" />
