Add preview after take picture or video to validate them

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,9 @@ dependencies {
 
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+
+    // ExoPlayer
+    implementation 'com.google.android.exoplayer:exoplayer:2.14.1'
 }
 
 kapt {
