--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,8 @@ dependencies {
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.2.0')
-    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.2'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.0'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
 
