--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28"
-        tools:ignore="ScopedStorage"  />
+        tools:ignore="ScopedStorage" />
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -22,12 +23,14 @@
         android:fullBackupContent="true"
         android:icon="@drawable/real_estate_icon"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/real_estate_icon"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:requestLegacyExternalStorage="true">
+        android:theme="@style/AppTheme">
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
 
         <activity android:name=".ui.list.ListActivity">
             <intent-filter>
@@ -38,9 +41,12 @@
         </activity>
         <activity android:name=".ui.details.DetailsActivity" />
         <activity android:name=".ui.add.AddPropertyActivity" />
-        <activity android:name=".ui.camera.CameraActivity"
-            android:theme="@style/fullscreenTheme"
+        <activity android:name=".ui.mediaViewer.MediaViewerActivity"
+            android:theme="@style/fullscreenTheme"/>
+        <activity
+            android:name=".ui.camera.CameraActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/fullscreenTheme"
             tools:ignore="LockedOrientationActivity" />
 
         <meta-data
