--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity android:name=".ui.details.DetailsActivity" />
         <activity android:name=".ui.add.AddPropertyActivity" />
         <activity android:name=".ui.mediaViewer.MediaViewerActivity"
-            android:theme="@style/fullscreenTheme"/>
+            android:theme="@style/fullscreenTheme"
+            android:screenOrientation="fullSensor"/>
         <activity
             android:name=".ui.camera.CameraActivity"
             android:screenOrientation="portrait"
