--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled true
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
 
     buildFeatures {
@@ -56,7 +62,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.4.0'
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
-    implementation "androidx.activity:activity-ktx:1.2.4"
+    implementation "androidx.activity:activity-ktx:1.3.0"
 
     // Dagger Hilt
     implementation 'com.google.dagger:hilt-android:2.37'
@@ -103,6 +109,11 @@ dependencies {
 
     // PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    // Room
+    implementation "androidx.room:room-ktx:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
 }
 
 kapt {
