--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,19 +60,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
+    implementation "androidx.startup:startup-runtime:1.1.0"
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
     implementation "androidx.activity:activity-ktx:1.3.0"
 
     // Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.37'
-    kapt 'com.google.dagger:hilt-compiler:2.37'
-    // For instrumentation tests
-    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.37'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.37'
-    // For local unit tests
-    testImplementation 'com.google.dagger:hilt-android-testing:2.37'
-    kaptTest 'com.google.dagger:hilt-compiler:2.37'
+    implementation("com.google.dagger:hilt-android:$hilt_version")
+    kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
+    implementation("androidx.hilt:hilt-work:1.0.0")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -114,6 +111,10 @@ dependencies {
     implementation "androidx.room:room-ktx:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
     androidTestImplementation "androidx.room:room-testing:2.3.0"
+
+    // Work Manager
+    implementation("androidx.work:work-runtime-ktx:2.5.0")
+
 }
 
 kapt {
