--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 
     ext {
         kotlin_version = '1.5.10'
+        hilt_version = '2.38.1'
     }
     repositories {
         google()
@@ -15,7 +16,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // Dagger Hilt
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.36'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // Firebase
         classpath 'com.google.gms:google-services:4.3.8'
