--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
         android:fullBackupContent="true"
         android:icon="@drawable/real_estate_icon"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/real_estate_icon"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
 
         <uses-library
@@ -42,21 +42,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ui.details.DetailsActivity"
+        <activity
+            android:name=".ui.details.DetailsActivity"
             android:parentActivityName=".ui.list.ListActivity" />
-
         <activity android:name=".ui.add.AddPropertyActivity" />
-
-        <activity android:name=".ui.mediaViewer.MediaViewerActivity"
-            android:theme="@style/fullscreenTheme"
-            android:screenOrientation="fullSensor"/>
-
+        <activity android:name=".ui.settings.SettingsActivity"
+            android:parentActivityName=".ui.list.ListActivity"  />
+        <activity
+            android:name=".ui.mediaViewer.MediaViewerActivity"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/fullscreenTheme" />
         <activity
             android:name=".ui.camera.CameraActivity"
+            android:parentActivityName=".ui.add.Hilt_AddPropertyActivity"
             android:screenOrientation="portrait"
             android:theme="@style/fullscreenTheme"
-            android:parentActivityName=".ui.add.Hilt_AddPropertyActivity"
             tools:ignore="LockedOrientationActivity" />
 
         <meta-data
@@ -78,18 +78,19 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
         <provider
             android:name="androidx.work.impl.WorkManagerInitializer"
             android:authorities="${applicationId}.workmanager-init"
             tools:node="remove" />
 
-        <service android:name="com.openclassrooms.realestatemanager.services.VideoDownloadService"
+        <service
+            android:name=".services.VideoDownloadService"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.exoplayer.downloadService.action.RESTART"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="com.google.android.exoplayer.downloadService.action.RESTART" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
     </application>
