--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
@@ -63,7 +63,7 @@ dependencies {
     implementation "androidx.startup:startup-runtime:1.1.0"
 
     implementation "androidx.fragment:fragment-ktx:1.3.6"
-    implementation "androidx.activity:activity-ktx:1.3.0"
+    implementation "androidx.activity:activity-ktx:1.3.1"
 
     // Dagger Hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
@@ -92,7 +92,7 @@ dependencies {
 
     // Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.0'
 
     // Timber
@@ -113,6 +113,7 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:2.3.0"
 
     // Work Manager
+    //noinspection GradleDependency -> Needed for hilt injection
     implementation("androidx.work:work-runtime-ktx:2.5.0")
 
 }
