change geoapify for static map api

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'kotlin-parcelize'
 
 def mapApiKey = project.properties['MAPS_API_KEY']
-def geoapifyApiKey = project.properties['GEOAPIFY_API_KEY']
+def staticMapApiKey = project.properties['GOOGLE_MAPS_STATIC_API_KEY']
 
 android {
     compileSdkVersion 30
@@ -40,7 +40,7 @@ android {
             buildConfigField("String", "MAPS_API_KEY", "\"${mapApiKey}\"")
             resValue("string", "maps_api_key", "${mapApiKey}")
 
-            buildConfigField("String", "GEOAPIFY_API_KEY", "\"${geoapifyApiKey}\"")
+            buildConfigField("String", "GOOGLE_MAPS_STATIC_API_KEY", "\"${staticMapApiKey}\"")
         }
     }
 
