--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,6 +146,7 @@ dependencies {
 
     // Truth
     androidTestImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "com.google.truth:truth:1.1.3"
 
     // Turbine
     androidTestImplementation 'app.cash.turbine:turbine:0.6.1'
