--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,6 +150,10 @@ dependencies {
 
     // Turbine
     androidTestImplementation 'app.cash.turbine:turbine:0.6.1'
+
+    // Mockito
+    testImplementation "org.mockito:mockito-core:3.12.4"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
 }
 
 kapt {
