--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha01'
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha01'
     implementation "androidx.startup:startup-runtime:1.1.0"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
@@ -80,6 +80,7 @@ dependencies {
 
     // Dagger Hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha01'
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
     // Dagger Hilt - For Work Manager
     implementation("androidx.hilt:hilt-work:1.0.0")
